2005-12-20  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2005-09-24  Ben Elliston  <bje@gnu.org>

	* packaging/pkg/pkginfo (EMAIL): Update mail address.

	* lib/rsh.exp: Tidy comments.

2005-07-07  Ben Elliston  <bje@gnu.org>

	* lib/telnet.exp (telnet_transmit): Remove; use standard method.

2005-07-07  Ben Elliston  <bje@gnu.org>

	* Makefile.am (baseboard_SCRIPTS): Add ms1-sid.exp.
	* Makefile.in: Regenerate.

2005-07-06  Ben Elliston  <bje@gnu.org>

	* lib/tip.exp (tip_open): Improve comments.
	(tip_download): Likewise.

2005-07-06  Ben Elliston  <bje@gnu.org>

	* lib/telnet.exp (telnet_open): Improve option handling.  Clarify
	documentation for each proc.

2005-07-06  Ben Elliston  <bje@gnu.org>

	* aclocal.m4: Regenerate with aclocal 1.9.
	* configure: Regenerate with autoconf 2.59.
	* doc/C/Makefile.am: Remove stray include.
	* Makefile.in, doc/Makefile.in, doc/C/Makefile.in,
	example/Makefile.in, testsuite/Makefile.in,
	testsuite/libdejagnu/Makefile.in: Regenerate with automake 1.9.

2005-07-06  Ben Elliston  <bje@gnu.org>

	Import some missing hunks from this patch on sourceware:

	2004-11-11  Nick Clifton  <nickc@redhat.com>

	* lib/libgloss.exp (libio_include_flags, g++_include_flags,
	winsup_include_flags): Revert previous patch, restoring the use of
	-I, for all libraries except newlib.  Newlib needs -isystem to
	avoid the problems with <limits.h> but the C++ and winsup
	libraries need -I because -isystem generates an implicit 'extern
	"C"' which may not be appropriate for certain targets.

2005-07-06  Aldy Hernandez  <aldyh@redhat.com>

	* baseboards/ms1-sid.exp: New.

2005-07-01  Ben Elliston  <bje@gnu.org>

	Unify some changes with the 1.4 branch:

	2004-10-28  Nick Clifton  <nickc@redhat.com>
	* baseboards/iq2000-sim.exp: New file.

	2004-06-08  Alexandre Oliva  <aoliva@redhat.com>
	* baseboards/mn10300-sim.exp: Set needs_status_wrapper and
	noresults to zero.
